=head1 Krang Changelog

This document contains a list of changes for each release of Krang.



=head2 3.04 - IN DEVELOPMENT

=over

=item *

Gave the scheduler the ability to email users after succeeding with or giving up on a job. [Noam Weinstein]

=item *

Made schedule failure more configurable on the API level, adding the ability to specify how many times 
a particular job is attempted and how long the daemon waits between attempts. [Noam Weinstein]

=item *

Added ability to create object-specific alerts that are triggered only for particular story
or media objects. Enhanced MyAlerts UI to allow users to control these. [Noam Weinstein]

=item *

In various templates, replaced CSS class 'c-mini' by 'c-label-tiny'
according to Michael Peters' renaming in r5180. [Bodo Schulze]

=item *

Added initial support for Xinha-backed bulk edit, based on code by
Noam Weinstein. [Bodo Schulze]

=item * 

Fix to transfer media to trashbin when deleting it from within the
Edit screen (thanx Noam). [Bodo Schulze]

=item *

Added elements to Media objects, enhanced Media Edit UI to take advantage of the ability 
to create, edit, and publish element data along with media objects. Wrote upgrade code 
to instantiate skeletal media element class. [Noam Weinstein]

=item *

Refactored element_bulk_edit() and element_bulk_save() to ease the
implementation of WYSIWYG-based bulk edit areas. [Bodo Schulze]

=item *

Standardized locations of bottom-panel buttons on Edit screens. [Noam Weinstein]

=item *

Made it possible to associate contributors with a story or media
object even if the user doesn't have the manage_contribs permission,
which should presumably be required only for the ability to add or delete
contributors from the system. [Noam Weinstein]

=item *

Fixed bug where cloning a read-only story doesn't reset may_edit flag.  
[Noam Weinstein]

=item *

Added ability to rename media files (through code, not GUI) without re-uploading 
object. [Noam Weinstein]

=item *
